--- a/config/lycanitesmobs/lycanitesmobs-mobevents.cfg
+++ b/config/lycanitesmobs/lycanitesmobs-mobevents.cfg
@@ -52,35 +52,35 @@
     B:"bladeflurry Dimensions Whitelist Mode"=false
     S:"boulderdash Dimensions"=-1, 1
     B:"boulderdash Dimensions Whitelist Mode"=false
-    S:"cinderfall Dimensions"=1
+    S:"cinderfall Dimensions"=1, 7
     B:"cinderfall Dimensions Whitelist Mode"=false
-    S:"eruption Dimensions"=1
+    S:"eruption Dimensions"=1, 7
     B:"eruption Dimensions Whitelist Mode"=false
     S:"halloween Dimensions"=-1, 1
     B:"halloween Dimensions Whitelist Mode"=false
-    S:"hellsfury Dimensions"=1
+    S:"hellsfury Dimensions"=1, 7
     B:"hellsfury Dimensions Whitelist Mode"=false
     S:"marchofthegorgomites Dimensions"=-1, 1
     B:"marchofthegorgomites Dimensions Whitelist Mode"=false
-    S:"poopparty Dimensions"=-1, 0, 1
+    S:"poopparty Dimensions"=-1, 0, 1, 7
     B:"poopparty Dimensions Whitelist Mode"=false
-    S:"raptorrampage Dimensions"=-1, 1
+    S:"raptorrampage Dimensions"=-1, 1, 7
     B:"raptorrampage Dimensions Whitelist Mode"=false
-    S:"roasting Dimensions"=-1, 1
+    S:"roasting Dimensions"=-1, 1, 7
     B:"roasting Dimensions Whitelist Mode"=false
     S:"rootriot Dimensions"=-1, 1
     B:"rootriot Dimensions Whitelist Mode"=false
-    S:"rudolph Dimensions"=-1, 1
+    S:"rudolph Dimensions"=-1, 1, 7
     B:"rudolph Dimensions Whitelist Mode"=false
-    S:"saltytree Dimensions"=-1, 1
+    S:"saltytree Dimensions"=-1, 1, 7
     B:"saltytree Dimensions Whitelist Mode"=false
-    S:"satanclaws Dimensions"=-1, 1
+    S:"satanclaws Dimensions"=-1, 1, 7
     B:"satanclaws Dimensions Whitelist Mode"=false
     S:"seastorm Dimensions"=-1, 1
     B:"seastorm Dimensions Whitelist Mode"=false
     S:"shadowgames Dimensions"=-1
     B:"shadowgames Dimensions Whitelist Mode"=false
-    S:"subzero Dimensions"=-1, 1
+    S:"subzero Dimensions"=-1, 1, 7
     B:"subzero Dimensions Whitelist Mode"=false
     S:"theswarm Dimensions"=-1, 1
     B:"theswarm Dimensions Whitelist Mode"=false
@@ -90,7 +90,7 @@
     B:"windstorm Dimensions Whitelist Mode"=false
     S:"wingedvenom Dimensions"=-1, 1
     B:"wingedvenom Dimensions Whitelist Mode"=false
-    S:"wintersgrasp Dimensions"=-1, 1
+    S:"wintersgrasp Dimensions"=-1, 1, 7
     B:"wintersgrasp Dimensions Whitelist Mode"=false
 }
 
