--- a/config/lycanitesmobs/lycanitesmobs-mobevents.cfg
+++ b/config/lycanitesmobs/lycanitesmobs-mobevents.cfg
@@ -42,55 +42,55 @@
 ##########################################################################################################
 
 "event dimensions" {
-    S:"arachnophobia Dimensions"=-1, 1
+    S:"arachnophobia Dimensions"=-1, 1, 23, 24
     B:"arachnophobia Dimensions Whitelist Mode"=false
-    S:"bamstorm Dimensions"=-1, 1
+    S:"bamstorm Dimensions"=-1, 1, 23, 24
     B:"bamstorm Dimensions Whitelist Mode"=false
-    S:"blackplague Dimensions"=-1
+    S:"blackplague Dimensions"=-1, 23, 24
     B:"blackplague Dimensions Whitelist Mode"=false
-    S:"bladeflurry Dimensions"=-1, 1
+    S:"bladeflurry Dimensions"=-1, 1, 23, 24
     B:"bladeflurry Dimensions Whitelist Mode"=false
-    S:"boulderdash Dimensions"=-1, 1
+    S:"boulderdash Dimensions"=-1, 1, 23, 24
     B:"boulderdash Dimensions Whitelist Mode"=false
-    S:"cinderfall Dimensions"=1, 7
+    S:"cinderfall Dimensions"=1, 7, 23, 24
     B:"cinderfall Dimensions Whitelist Mode"=false
-    S:"eruption Dimensions"=1, 7
+    S:"eruption Dimensions"=1, 7, 23, 24
     B:"eruption Dimensions Whitelist Mode"=false
-    S:"halloween Dimensions"=-1, 1
+    S:"halloween Dimensions"=-1, 1, 23, 24
     B:"halloween Dimensions Whitelist Mode"=false
-    S:"hellsfury Dimensions"=1, 7
+    S:"hellsfury Dimensions"=1, 7, 23, 24
     B:"hellsfury Dimensions Whitelist Mode"=false
-    S:"marchofthegorgomites Dimensions"=-1, 1
+    S:"marchofthegorgomites Dimensions"=-1, 1, 23, 24
     B:"marchofthegorgomites Dimensions Whitelist Mode"=false
-    S:"poopparty Dimensions"=-1, 0, 1, 7
+    S:"poopparty Dimensions"=-1, 0, 1, 7, 23, 24
     B:"poopparty Dimensions Whitelist Mode"=false
-    S:"raptorrampage Dimensions"=-1, 1, 7
+    S:"raptorrampage Dimensions"=-1, 1, 7, 23, 24
     B:"raptorrampage Dimensions Whitelist Mode"=false
-    S:"roasting Dimensions"=-1, 1, 7
+    S:"roasting Dimensions"=-1, 1, 7, 23, 24
     B:"roasting Dimensions Whitelist Mode"=false
-    S:"rootriot Dimensions"=-1, 1
+    S:"rootriot Dimensions"=-1, 1, 23, 24
     B:"rootriot Dimensions Whitelist Mode"=false
-    S:"rudolph Dimensions"=-1, 1, 7
+    S:"rudolph Dimensions"=-1, 1, 7, 23, 24
     B:"rudolph Dimensions Whitelist Mode"=false
-    S:"saltytree Dimensions"=-1, 1, 7
+    S:"saltytree Dimensions"=-1, 1, 7, 23, 24
     B:"saltytree Dimensions Whitelist Mode"=false
-    S:"satanclaws Dimensions"=-1, 1, 7
+    S:"satanclaws Dimensions"=-1, 1, 7, 23, 24
     B:"satanclaws Dimensions Whitelist Mode"=false
-    S:"seastorm Dimensions"=-1, 1
+    S:"seastorm Dimensions"=-1, 1, 23, 24
     B:"seastorm Dimensions Whitelist Mode"=false
-    S:"shadowgames Dimensions"=-1
+    S:"shadowgames Dimensions"=-1, 23, 24
     B:"shadowgames Dimensions Whitelist Mode"=false
-    S:"subzero Dimensions"=-1, 1, 7
+    S:"subzero Dimensions"=-1, 1, 7, 23, 24
     B:"subzero Dimensions Whitelist Mode"=false
-    S:"theswarm Dimensions"=-1, 1
+    S:"theswarm Dimensions"=-1, 1, 23, 24
     B:"theswarm Dimensions Whitelist Mode"=false
-    S:"tsunami Dimensions"=-1, 1
+    S:"tsunami Dimensions"=-1, 1, 23, 24
     B:"tsunami Dimensions Whitelist Mode"=false
-    S:"windstorm Dimensions"=-1, 1
+    S:"windstorm Dimensions"=-1, 1, 23, 24
     B:"windstorm Dimensions Whitelist Mode"=false
-    S:"wingedvenom Dimensions"=-1, 1
+    S:"wingedvenom Dimensions"=-1, 1, 23, 24
     B:"wingedvenom Dimensions Whitelist Mode"=false
-    S:"wintersgrasp Dimensions"=-1, 1, 7
+    S:"wintersgrasp Dimensions"=-1, 1, 7, 23, 24
     B:"wintersgrasp Dimensions Whitelist Mode"=false
 }
 
